fix tests and cleanup the rest of the code